<resources>

    <!--应用程序信息文本-->
    <string name="app_name">移动推送Demo</string>
    <string name="app_version">v3.0.11</string>

    <string name="tab_basic">基础功能</string>
    <string name="tab_advanced">高级功能</string>
    <string name="tab_info">信息</string>

    <string name="toast_double_click_exit">再按一次退出应用</string>

    <!--基础功能-->
    <string name="push_basic_hint">欢迎来到阿里云移动推送\nDemo,开始你的调试吧~</string>
    <string name="push_register_receive">注册并接收推送</string>
    <string name="content_push_channel">打开推送通道</string>
    <string name="push_logo">移动推送logo</string>
    <string name="push_open_channel">打开推送功能</string>
    <string name="push_group_show">分组展示通知</string>
    <string name="push_service_receive_notify">使用Service接收推送</string>
    <string name="push_log_level">设置日志等级</string>
    <string name="push_clear_notification">清除自有通道通知</string>
    <string name="push_toast_open_push_channel_success">打开推送通道成功</string>
    <string name="push_toast_open_push_channel_fail">打开推送通道失败，失败原因：%s</string>
    <string name="push_toast_close_push_channel_success">关闭推送通道成功</string>
    <string name="push_toast_close_push_channel_fail">关闭推送通道失败，失败原因：%s</string>
    <string name="push_toast_clear_notification_success">清除所有通知成功</string>
    <string name="push_toast_register_success">注册成功</string>
    <string name="push_toast_register_fail">注册失败，失败原因：%s</string>
    <string name="push_dialog_set_log_level">设置日志等级</string>
    <string name="push_label_error">Error</string>
    <string name="push_label_info">Info</string>
    <string name="push_label_debug">Debug</string>
    <string name="push_label_close_log">关闭日志</string>
    <string name="push_cancel">取消</string>
    <string name="push_confirm">确定</string>
    <string name="push_close">关闭</string>
    <string name="push_check">是否选中</string>
    <string name="count_limit_hint">设备标签和别名数量限制说明</string>
    <string name="push_alert">alert</string>
    <string name="push_device_tag">设备标签</string>
    <string name="push_look_all">查看全部</string>
    <string name="push_add_tag">添加标签</string>
    <string name="push_tag_length_limit">单个标签最大长度不超过129字符</string>
    <string name="push_input_empty">输入内容为空</string>
    <string name="push_already_add">已添加</string>
    <string name="push_add_device_tag">添加设备标签</string>
    <string name="push_input_tag_hint">请输入标签名称</string>
    <string name="push_toast_add_device_tag_fail">添加设备标签失败,失败原因：%s</string>
    <string name="push_toast_add_tag_fail">添加标签失败,失败原因：%s</string>
    <string name="push_toast_delete_device_tag_fail">删除设备标签失败,失败原因：%s</string>
    <string name="push_alias_set">别名设置</string>
    <string name="push_add_alias">添加别名</string>
    <string name="push_input_alias_hint">请输入别名</string>
    <string name="push_toast_add_alias_fail">添加别名失败,失败原因：%s</string>
    <string name="push_toast_delete_alias_fail">删除别名失败,失败原因：%s</string>
    <string name="push_add_alias_tag">添加别名标签</string>
    <string name="push_input_alias_tag_hint">请输入标签名称</string>
    <string name="push_alias_empty">未输入别名</string>
    <string name="push_toast_add_alias_tag_fail">添加别名标签失败,失败原因：%s</string>
    <string name="push_toast_delete_alias_tag_fail">删除别名标签失败,失败原因：%s</string>
    <string name="push_alias_tag">别名标签</string>
    <string name="push_account">账号</string>
    <string name="push_bind_account_no">未绑定账号</string>
    <string name="push_account_tag">账号标签</string>
    <string name="push_bind_account">绑定账号</string>
    <string name="push_bind_account_hint">请输入账号</string>
    <string name="push_bind_account_fail">绑定账号失败，失败原因：%s</string>
    <string name="push_unbind_account_fail">解绑账号失败，失败原因：%s</string>
    <string name="push_bind_account_tag">绑定账号标签</string>
    <string name="push_bind_account_tag_hint">请输入账号标签</string>
    <string name="push_bind_account_tag_fail">绑定账号标签失败,失败原因: %s</string>
    <string name="push_unbind_account_tag_fail">解绑账号标签失败,失败原因: %s</string>
    <string name="push_input_device_tag_hint">请输入设备标签</string>
    <string name="push_message">短信通知</string>
    <string name="push_bind_phone_no">未绑定手机号</string>
    <string name="push_text_notification">短信通知</string>
    <string name="push_text_notification_hint">请输入手机号</string>
    <string name="push_toast_bind_phone_fail">绑定手机号失败,失败原因:%s</string>
    <string name="push_toast_unbind_phone_fail">解绑手机号失败,失败原因:%s</string>
    <string name="push_tag_limit">标签（tag）</string>
    <string name="push_tag_limit_1">App最多支持定义1万个标签，单个标签支持的最大长度为128字符。</string>
    <string name="push_tag_limit_2">不建议在单个标签上绑定超过十万级设备，否则，发起对该标签的推送可能需要较长的处理时间，无法保障响应速度。此种情况下，建议您采用全推方式，或将设备集合拆分到更细粒度的标签，多次调用推送接口分别推送给这些标签来避免此问题。</string>
    <string name="push_alias_limit">别名（alias）</string>
    <string name="push_alias_limit_1">单个设备最多添加128个别名，同一个别名最多可被添加到128个设备。</string>
    <string name="push_alias_limit_2">别名支持的最大长度为128字节。</string>
    <string name="push_package">com.alibaba.push.android.demo</string>
    <string name="push_appkey">AppKey</string>
    <string name="push_app_secret">AppSecret</string>
    <string name="push_info_bg">信息页背景</string>
    <string name="push_info_logo">信息页logo</string>
    <string name="push_device_id">设备ID</string>
    <string name="push_utdid">UTDID</string>
    <string name="push_sdk_version">推送SDK版本号</string>
    <string name="push_version">v%s</string>
    <string name="push_toast_service_deal_message">service 收到了消息</string>
    <string name="push_toast_receiver_deal_message">receiver 收到了消息</string>
    <string name="push_toast_use_service_deal_message">使用service接收消息</string>
    <string name="push_toast_use_receiver_deal_message">使用receiver接收消息</string>
    <string name="push_toast_already_clear">已清除</string>
    <string name="push_dialog_message_title">下发消息内容</string>
    <string name="push_message_title">title:%s</string>
    <string name="push_message_content">content:%s</string>
    <string name="push_message_id">messageId:%s</string>
    <string name="push_message_trace_info">traceInfo:%s</string>
    <string name="btn_text_know">知道了</string>
    <string name="push_tag_set">标签设置</string>
    <string name="push_back">返回</string>
    <string name="push_tag_name">标签名称</string>
    <string name="push_input_tag_name">请输入标签名称</string>
    <string name="push_tag_desc">单个标签最大长度不超过128个字符</string>
    <string name="push_tag_target_label">添加至</string>
    <string name="push_alias_list">别名列表</string>
    <string name="push_tag_input_not">标签未输入</string>
    <string name="push_get_alias_list_fail">获取别名列表失败,失败原因：%s</string>
    <string name="push_get_device_tag_list_fail">获取设备标签列表失败,失败原因：%s</string>
    <string name="push_useful">对自有通道、厂商通道生效</string>
    <string name="push_usefut_emas">只对自有通道生效</string>
    <string name="push_register_btn_success">注册并接收推送成功</string>
    <string name="push_registering">注册中</string>
    <string name="push_register_btn_fail">注册失败</string>
    <string name="push_alias_no_choose">未选择别名</string>
    <string name="push_brand_type">厂商通道类型</string>
    <string name="push_toast_already_copy">复制成功</string>
    <string name="push_token">Token</string>
    <string name="push_unknow_brand">未知厂商</string>
    <string name="push_cannot_get_token">未获取到token,需要去开放平台注册应用</string>
    <string name="push_toast_no_register">未注册</string>
    <string name="push_toast_delete_tag_success">删除标签成功</string>
    <string name="push_toast_delete_alias_success">删除别名成功</string>
    <string name="push_open_group_show_notificaion">打开分组展示通知</string>
    <string name="push_close_group_show_notificaion">关闭分组展示通知</string>
    <string name="push_dialog_limit_desc">限制说明</string>
    <string name="push_unbind_first">请先解除绑定</string>
    <string name="push_unbind">解除绑定</string>
    <string name="push_tag_type_no_choose">未选择标签类型</string>
    <string name="push_add_alias_alert">单个别名最大长度不超过128字节</string>
</resources>
