<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="InfoFragmentBinding">

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/push_bg_info"
            android:scaleType="centerCrop"
            android:contentDescription="@string/push_info_bg"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@mipmap/push_info_logo"
            android:layout_marginTop="78dp"
            android:contentDescription="@string/push_info_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ivLogo"
            app:layout_constraintStart_toEndOf="@id/ivLogo"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textColor="@color/push_color_text_black_deep"
            android:textStyle="bold"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/tvPackage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/push_package"
            app:layout_constraintStart_toEndOf="@id/ivLogo"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@id/ivLogo"
            android:textColor="@color/push_color_text_gray"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/ivLogo"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="34dp"
            android:background="@drawable/push_shape_info_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/push_appkey"
                android:textColor="@color/push_color_text_black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="21dp" />

            <TextView
                android:id="@+id/tvAppKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="233580643"
                android:textColor="@color/push_color_text_gray"
                android:textSize="16sp"
                android:layout_marginTop="6dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/push_app_secret"
                android:textColor="@color/push_color_text_black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="22dp" />

            <TextView
                android:id="@+id/tvAppSecret"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="55813c0csjkfjlsjglakj415615ds6gjdkjkfjklsdj"
                android:textColor="@color/push_color_text_gray"
                android:textSize="16sp"
                android:layout_marginTop="6dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/push_device_id"
                android:textColor="@color/push_color_text_black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="22dp" />

            <TextView
                android:id="@+id/tvDeviceId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="-"
                android:textColor="@color/push_color_text_gray"
                android:textSize="16sp"
                android:layout_marginTop="6dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/push_utdid"
                android:textColor="@color/push_color_text_black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="22dp" />

            <TextView
                android:id="@+id/tvUTDID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="ZsxODwq26psojfkslgksfgklghsaklg7h"
                android:textColor="@color/push_color_text_gray"
                android:textSize="16sp"
                android:layout_marginTop="6dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/push_sdk_version"
                android:textColor="@color/push_color_text_black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="22dp" />

            <TextView
                android:id="@+id/tvSDKVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="v3.8.8.1"
                android:textColor="@color/push_color_text_gray"
                android:textSize="16sp"
                android:layout_marginTop="6dp" />


        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>